--- a/jupyter_notebooks/Notebook_8_BestModel.ipynb
+++ b/jupyter_notebooks/Notebook_8_BestModel.ipynb
@@ -84,10 +84,480 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(1460, 7)\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>OverallQual</th>\n",
+              "      <th>GrLivArea</th>\n",
+              "      <th>GarageArea</th>\n",
+              "      <th>TotalBsmtSF</th>\n",
+              "      <th>YearBuilt</th>\n",
+              "      <th>LotArea</th>\n",
+              "      <th>SalePrice</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>7</td>\n",
+              "      <td>1710</td>\n",
+              "      <td>548</td>\n",
+              "      <td>856</td>\n",
+              "      <td>2003</td>\n",
+              "      <td>8450</td>\n",
+              "      <td>208500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>6</td>\n",
+              "      <td>1262</td>\n",
+              "      <td>460</td>\n",
+              "      <td>1262</td>\n",
+              "      <td>1976</td>\n",
+              "      <td>9600</td>\n",
+              "      <td>181500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>7</td>\n",
+              "      <td>1786</td>\n",
+              "      <td>608</td>\n",
+              "      <td>920</td>\n",
+              "      <td>2001</td>\n",
+              "      <td>11250</td>\n",
+              "      <td>223500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>7</td>\n",
+              "      <td>1717</td>\n",
+              "      <td>642</td>\n",
+              "      <td>756</td>\n",
+              "      <td>1915</td>\n",
+              "      <td>9550</td>\n",
+              "      <td>140000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>8</td>\n",
+              "      <td>2198</td>\n",
+              "      <td>836</td>\n",
+              "      <td>1145</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>14260</td>\n",
+              "      <td>250000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>5</td>\n",
+              "      <td>1362</td>\n",
+              "      <td>480</td>\n",
+              "      <td>796</td>\n",
+              "      <td>1993</td>\n",
+              "      <td>14115</td>\n",
+              "      <td>143000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>8</td>\n",
+              "      <td>1694</td>\n",
+              "      <td>636</td>\n",
+              "      <td>1686</td>\n",
+              "      <td>2004</td>\n",
+              "      <td>10084</td>\n",
+              "      <td>307000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>7</td>\n",
+              "      <td>2090</td>\n",
+              "      <td>484</td>\n",
+              "      <td>1107</td>\n",
+              "      <td>1973</td>\n",
+              "      <td>10382</td>\n",
+              "      <td>200000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>7</td>\n",
+              "      <td>1774</td>\n",
+              "      <td>468</td>\n",
+              "      <td>952</td>\n",
+              "      <td>1931</td>\n",
+              "      <td>6120</td>\n",
+              "      <td>129900</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>5</td>\n",
+              "      <td>1077</td>\n",
+              "      <td>205</td>\n",
+              "      <td>991</td>\n",
+              "      <td>1939</td>\n",
+              "      <td>7420</td>\n",
+              "      <td>118000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   OverallQual  GrLivArea  GarageArea  TotalBsmtSF  YearBuilt  LotArea  \\\n",
+              "0            7       1710         548          856       2003     8450   \n",
+              "1            6       1262         460         1262       1976     9600   \n",
+              "2            7       1786         608          920       2001    11250   \n",
+              "3            7       1717         642          756       1915     9550   \n",
+              "4            8       2198         836         1145       2000    14260   \n",
+              "5            5       1362         480          796       1993    14115   \n",
+              "6            8       1694         636         1686       2004    10084   \n",
+              "7            7       2090         484         1107       1973    10382   \n",
+              "8            7       1774         468          952       1931     6120   \n",
+              "9            5       1077         205          991       1939     7420   \n",
+              "\n",
+              "   SalePrice  \n",
+              "0     208500  \n",
+              "1     181500  \n",
+              "2     223500  \n",
+              "3     140000  \n",
+              "4     250000  \n",
+              "5     143000  \n",
+              "6     307000  \n",
+              "7     200000  \n",
+              "8     129900  \n",
+              "9     118000  "
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Loading original dataset for houseprices, for the steps to establish the best model for the houseprice predictor\n",
+        "df_houseprices_bestmodel = pd.read_csv('/workspace/milestone-project-housing-issues/outputs/datasets/final/HousePricesBestModel.csv')\n",
+        "print(df_houseprices_bestmodel.shape)\n",
+        "df_houseprices_bestmodel.head(10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(4, 23)\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>1stFlrSF</th>\n",
+              "      <th>2ndFlrSF</th>\n",
+              "      <th>BedroomAbvGr</th>\n",
+              "      <th>BsmtExposure</th>\n",
+              "      <th>BsmtFinSF1</th>\n",
+              "      <th>BsmtFinType1</th>\n",
+              "      <th>BsmtUnfSF</th>\n",
+              "      <th>EnclosedPorch</th>\n",
+              "      <th>GarageArea</th>\n",
+              "      <th>GarageFinish</th>\n",
+              "      <th>...</th>\n",
+              "      <th>LotArea</th>\n",
+              "      <th>LotFrontage</th>\n",
+              "      <th>MasVnrArea</th>\n",
+              "      <th>OpenPorchSF</th>\n",
+              "      <th>OverallCond</th>\n",
+              "      <th>OverallQual</th>\n",
+              "      <th>TotalBsmtSF</th>\n",
+              "      <th>WoodDeckSF</th>\n",
+              "      <th>YearBuilt</th>\n",
+              "      <th>YearRemodAdd</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>896</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>No</td>\n",
+              "      <td>468.0</td>\n",
+              "      <td>Rec</td>\n",
+              "      <td>270.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>730.0</td>\n",
+              "      <td>Unf</td>\n",
+              "      <td>...</td>\n",
+              "      <td>11622</td>\n",
+              "      <td>80.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>5</td>\n",
+              "      <td>882.0</td>\n",
+              "      <td>140</td>\n",
+              "      <td>1961</td>\n",
+              "      <td>1961</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1329</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>No</td>\n",
+              "      <td>923.0</td>\n",
+              "      <td>ALQ</td>\n",
+              "      <td>406.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>312.0</td>\n",
+              "      <td>Unf</td>\n",
+              "      <td>...</td>\n",
+              "      <td>14267</td>\n",
+              "      <td>81.0</td>\n",
+              "      <td>108.0</td>\n",
+              "      <td>36</td>\n",
+              "      <td>6</td>\n",
+              "      <td>6</td>\n",
+              "      <td>1329.0</td>\n",
+              "      <td>393</td>\n",
+              "      <td>1958</td>\n",
+              "      <td>1958</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>928</td>\n",
+              "      <td>701</td>\n",
+              "      <td>3</td>\n",
+              "      <td>No</td>\n",
+              "      <td>791.0</td>\n",
+              "      <td>GLQ</td>\n",
+              "      <td>137.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>482.0</td>\n",
+              "      <td>Fin</td>\n",
+              "      <td>...</td>\n",
+              "      <td>13830</td>\n",
+              "      <td>74.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>34</td>\n",
+              "      <td>5</td>\n",
+              "      <td>5</td>\n",
+              "      <td>928.0</td>\n",
+              "      <td>212</td>\n",
+              "      <td>1997</td>\n",
+              "      <td>1998</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>926</td>\n",
+              "      <td>678</td>\n",
+              "      <td>3</td>\n",
+              "      <td>No</td>\n",
+              "      <td>602.0</td>\n",
+              "      <td>GLQ</td>\n",
+              "      <td>324.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>470.0</td>\n",
+              "      <td>Fin</td>\n",
+              "      <td>...</td>\n",
+              "      <td>9978</td>\n",
+              "      <td>78.0</td>\n",
+              "      <td>20.0</td>\n",
+              "      <td>36</td>\n",
+              "      <td>6</td>\n",
+              "      <td>6</td>\n",
+              "      <td>926.0</td>\n",
+              "      <td>360</td>\n",
+              "      <td>1998</td>\n",
+              "      <td>1998</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>4 rows × 23 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   1stFlrSF  2ndFlrSF  BedroomAbvGr BsmtExposure  BsmtFinSF1 BsmtFinType1  \\\n",
+              "0       896         0             2           No       468.0          Rec   \n",
+              "1      1329         0             3           No       923.0          ALQ   \n",
+              "2       928       701             3           No       791.0          GLQ   \n",
+              "3       926       678             3           No       602.0          GLQ   \n",
+              "\n",
+              "   BsmtUnfSF  EnclosedPorch  GarageArea GarageFinish  ...  LotArea  \\\n",
+              "0      270.0              0       730.0          Unf  ...    11622   \n",
+              "1      406.0              0       312.0          Unf  ...    14267   \n",
+              "2      137.0              0       482.0          Fin  ...    13830   \n",
+              "3      324.0              0       470.0          Fin  ...     9978   \n",
+              "\n",
+              "   LotFrontage MasVnrArea  OpenPorchSF  OverallCond  OverallQual  TotalBsmtSF  \\\n",
+              "0         80.0        0.0            0            6            5        882.0   \n",
+              "1         81.0      108.0           36            6            6       1329.0   \n",
+              "2         74.0        0.0           34            5            5        928.0   \n",
+              "3         78.0       20.0           36            6            6        926.0   \n",
+              "\n",
+              "   WoodDeckSF  YearBuilt  YearRemodAdd  \n",
+              "0         140       1961          1961  \n",
+              "1         393       1958          1958  \n",
+              "2         212       1997          1998  \n",
+              "3         360       1998          1998  \n",
+              "\n",
+              "[4 rows x 23 columns]"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Loading the Inherited Houses dataset for estimating the houseprice of each of the client's inherited houses\n",
+        "df_houseprices_inheritedhouses = pd.read_csv('/workspace/milestone-project-housing-issues/inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/inherited_houses.csv')\n",
+        "print(df_houseprices_inheritedhouses.shape)\n",
+        "df_houseprices_inheritedhouses.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>OverallQual</th>\n",
+              "      <th>GrLivArea</th>\n",
+              "      <th>GarageArea</th>\n",
+              "      <th>YearBuilt</th>\n",
+              "      <th>TotalBsmtSF</th>\n",
+              "      <th>LotArea</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>5</td>\n",
+              "      <td>896</td>\n",
+              "      <td>730.0</td>\n",
+              "      <td>1961</td>\n",
+              "      <td>882.0</td>\n",
+              "      <td>11622</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>6</td>\n",
+              "      <td>1329</td>\n",
+              "      <td>312.0</td>\n",
+              "      <td>1958</td>\n",
+              "      <td>1329.0</td>\n",
+              "      <td>14267</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>5</td>\n",
+              "      <td>1629</td>\n",
+              "      <td>482.0</td>\n",
+              "      <td>1997</td>\n",
+              "      <td>928.0</td>\n",
+              "      <td>13830</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>6</td>\n",
+              "      <td>1604</td>\n",
+              "      <td>470.0</td>\n",
+              "      <td>1998</td>\n",
+              "      <td>926.0</td>\n",
+              "      <td>9978</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   OverallQual  GrLivArea  GarageArea  YearBuilt  TotalBsmtSF  LotArea\n",
+              "0            5        896       730.0       1961        882.0    11622\n",
+              "1            6       1329       312.0       1958       1329.0    14267\n",
+              "2            5       1629       482.0       1997        928.0    13830\n",
+              "3            6       1604       470.0       1998        926.0     9978"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_houseprices_inheritedhouses[['OverallQual', 'GrLivArea', 'GarageArea', 'YearBuilt', 'TotalBsmtSF', 'LotArea']]"
+      ]
     },
     {
       "cell_type": "markdown",
