--- a/jupyter_notebooks/Notebook_6_RegressionAnalysisTransformed.ipynb
+++ b/jupyter_notebooks/Notebook_6_RegressionAnalysisTransformed.ipynb
@@ -18480,14 +18480,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#  Regression Analysis with Categorical Target Variable"
+        "<!-- #  Regression Analysis with Categorical Target Variable -->"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Convert numerical target to bins"
+        "<!-- ### Convert numerical target to bins -->"
       ]
     },
     {
@@ -18516,13 +18516,13 @@
         }
       ],
       "source": [
-        "from feature_engine.discretisation import EqualFrequencyDiscretiser\n",
-        "disc = EqualFrequencyDiscretiser(q=4, variables=['SalePrice'])  # we will try q as 2, and 3\n",
-        "df_clf = disc.fit_transform(combined_df)\n",
+        "# from feature_engine.discretisation import EqualFrequencyDiscretiser\n",
+        "# disc = EqualFrequencyDiscretiser(q=4, variables=['SalePrice'])  # we will try q as 2, and 3\n",
+        "# df_clf = disc.fit_transform(combined_df)\n",
         "\n",
-        "print(f\"* The classes represent the following ranges: \\n{disc.binner_dict_} \\n\")\n",
-        "sns.countplot(data=df_clf, x='SalePrice')\n",
-        "plt.show()"
+        "# print(f\"* The classes represent the following ranges: \\n{disc.binner_dict_} \\n\")\n",
+        "# sns.countplot(data=df_clf, x='SalePrice')\n",
+        "# plt.show()"
       ]
     },
     {
@@ -18671,14 +18671,14 @@
         }
       ],
       "source": [
-        "df_clf.head(3)"
+        "# df_clf.head(3)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Rewriting ML Pipeline for modelling"
+        "<!-- ### Rewriting ML Pipeline for modelling -->"
       ]
     },
     {
@@ -18687,28 +18687,28 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def PipelineOptimization(model):\n",
-        "    pipeline_base = Pipeline([\n",
+        "# def PipelineOptimization(model):\n",
+        "#     pipeline_base = Pipeline([\n",
         "\n",
-        "        (\"SmartCorrelatedSelection\", SmartCorrelatedSelection(variables=None,\n",
-        "         method=\"spearman\", threshold=0.6, selection_method=\"variance\")),\n",
+        "#         (\"SmartCorrelatedSelection\", SmartCorrelatedSelection(variables=None,\n",
+        "#          method=\"spearman\", threshold=0.6, selection_method=\"variance\")),\n",
         "\n",
-        "        (\"feat_scaling\", StandardScaler()),\n",
+        "#         (\"feat_scaling\", StandardScaler()),\n",
         "\n",
-        "        (\"feat_selection\",  SelectFromModel(model)),\n",
+        "#         (\"feat_selection\",  SelectFromModel(model)),\n",
         "\n",
-        "        (\"model\", model),\n",
+        "#         (\"model\", model),\n",
         "\n",
-        "    ])\n",
+        "#     ])\n",
         "\n",
-        "    return pipeline_base"
+        "#     return pipeline_base"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Algorithms for classification"
+        "<!-- #### Algorithms for classification -->"
       ]
     },
     {
@@ -18717,19 +18717,19 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from sklearn.tree import DecisionTreeClassifier \n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.ensemble import GradientBoostingClassifier \n",
-        "from sklearn.ensemble import ExtraTreesClassifier\n",
-        "from sklearn.ensemble import AdaBoostClassifier\n",
-        "from xgboost import XGBClassifier"
+        "# from sklearn.tree import DecisionTreeClassifier \n",
+        "# from sklearn.ensemble import RandomForestClassifier\n",
+        "# from sklearn.ensemble import GradientBoostingClassifier \n",
+        "# from sklearn.ensemble import ExtraTreesClassifier\n",
+        "# from sklearn.ensemble import AdaBoostClassifier\n",
+        "# from xgboost import XGBClassifier"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Splitting Train and Test Sets"
+        "<!-- ### Splitting Train and Test Sets -->"
       ]
     },
     {
@@ -18747,15 +18747,15 @@
         }
       ],
       "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "    df_clf.drop(['SalePrice'], axis=1),\n",
-        "    df_clf['SalePrice'],\n",
-        "    test_size=0.2,\n",
-        "    random_state=0\n",
-        ")\n",
+        "# X_train, X_test, y_train, y_test = train_test_split(\n",
+        "#     df_clf.drop(['SalePrice'], axis=1),\n",
+        "#     df_clf['SalePrice'],\n",
+        "#     test_size=0.2,\n",
+        "#     random_state=0\n",
+        "# )\n",
         "\n",
-        "print(\"* Train set:\", X_train.shape, y_train.shape,\n",
-        "      \"\\n* Test set:\",  X_test.shape, y_test.shape)"
+        "# print(\"* Train set:\", X_train.shape, y_train.shape,\n",
+        "#       \"\\n* Test set:\",  X_test.shape, y_test.shape)"
       ]
     },
     {
@@ -18796,14 +18796,14 @@
         }
       ],
       "source": [
-        "X_train.info()"
+        "# X_train.info()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Grid Seach CV – Sklearn"
+        "<!-- ## Grid Seach CV – Sklearn -->"
       ]
     },
     {
@@ -18812,23 +18812,23 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "models_quick_search = {\n",
-        "    \"XGBClassifier\": XGBClassifier(random_state=0),\n",
-        "    \"DecisionTreeClassifier\": DecisionTreeClassifier(random_state=0),\n",
-        "    \"RandomForestClassifier\": RandomForestClassifier(random_state=0),\n",
-        "    \"GradientBoostingClassifier\": GradientBoostingClassifier(random_state=0),\n",
-        "    \"ExtraTreesClassifier\": ExtraTreesClassifier(random_state=0),\n",
-        "    \"AdaBoostClassifier\": AdaBoostClassifier(random_state=0),\n",
-        "}\n",
+        "# models_quick_search = {\n",
+        "#     \"XGBClassifier\": XGBClassifier(random_state=0),\n",
+        "#     \"DecisionTreeClassifier\": DecisionTreeClassifier(random_state=0),\n",
+        "#     \"RandomForestClassifier\": RandomForestClassifier(random_state=0),\n",
+        "#     \"GradientBoostingClassifier\": GradientBoostingClassifier(random_state=0),\n",
+        "#     \"ExtraTreesClassifier\": ExtraTreesClassifier(random_state=0),\n",
+        "#     \"AdaBoostClassifier\": AdaBoostClassifier(random_state=0),\n",
+        "# }\n",
         "\n",
-        "params_quick_search = {\n",
-        "    \"XGBClassifier\":{},\n",
-        "    \"DecisionTreeClassifier\":{},\n",
-        "    \"RandomForestClassifier\":{},\n",
-        "    \"GradientBoostingClassifier\":{},\n",
-        "    \"ExtraTreesClassifier\":{},\n",
-        "    \"AdaBoostClassifier\":{},\n",
-        "}"
+        "# params_quick_search = {\n",
+        "#     \"XGBClassifier\":{},\n",
+        "#     \"DecisionTreeClassifier\":{},\n",
+        "#     \"RandomForestClassifier\":{},\n",
+        "#     \"GradientBoostingClassifier\":{},\n",
+        "#     \"ExtraTreesClassifier\":{},\n",
+        "#     \"AdaBoostClassifier\":{},\n",
+        "# }"
       ]
     },
     {
@@ -18890,8 +18890,8 @@
         }
       ],
       "source": [
-        "search = HyperparameterOptimizationSearch(models=models_quick_search, params=params_quick_search)\n",
-        "search.fit(X_train, y_train, scoring='r2', n_jobs=-1, cv=5)"
+        "# search = HyperparameterOptimizationSearch(models=models_quick_search, params=params_quick_search)\n",
+        "# search.fit(X_train, y_train, scoring='r2', n_jobs=-1, cv=5)"
       ]
     },
     {
@@ -19005,15 +19005,15 @@
         }
       ],
       "source": [
-        "grid_search_summary, grid_search_pipelines = quick_search.score_summary(sort_by='mean_score')\n",
-        "grid_search_summary"
+        "# grid_search_summary, grid_search_pipelines = quick_search.score_summary(sort_by='mean_score')\n",
+        "# grid_search_summary"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Extensive search on hyperparameters"
+        "<!-- ### Extensive search on hyperparameters -->"
       ]
     },
     {
@@ -19022,19 +19022,19 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "models_search_clf = {\n",
-        "    \"ExtraTreesRegressor\": ExtraTreesRegressor(random_state=0),\n",
-        "}\n",
+        "# models_search_clf = {\n",
+        "#     \"ExtraTreesRegressor\": ExtraTreesRegressor(random_state=0),\n",
+        "# }\n",
         "\n",
-        "params_search_clf = {\n",
-        "    \"ExtraTreesRegressor\": {\n",
-        "        'model__n_estimators': [100, 300],  # Number of trees\n",
-        "        'model__max_depth': [3, 10, None],  # Maximum depth of each tree\n",
-        "        'model__min_samples_split': [2, 5],  # Minimum samples required to split a node\n",
-        "        'model__min_samples_leaf': [1, 4],  # Minimum samples required at a leaf node\n",
-        "        'model__max_features': ['auto', 'sqrt'],  # Number of features to consider at each split\n",
-        "    }\n",
-        "}"
+        "# params_search_clf = {\n",
+        "#     \"ExtraTreesRegressor\": {\n",
+        "#         'model__n_estimators': [100, 300],  # Number of trees\n",
+        "#         'model__max_depth': [3, 10, None],  # Maximum depth of each tree\n",
+        "#         'model__min_samples_split': [2, 5],  # Minimum samples required to split a node\n",
+        "#         'model__min_samples_leaf': [1, 4],  # Minimum samples required at a leaf node\n",
+        "#         'model__max_features': ['auto', 'sqrt'],  # Number of features to consider at each split\n",
+        "#     }\n",
+        "# }"
       ]
     },
     {
@@ -19054,8 +19054,8 @@
         }
       ],
       "source": [
-        "search = HyperparameterOptimizationSearch(models=models_search_clf, params=params_search_clf)\n",
-        "search.fit(X_train, y_train, scoring = 'r2', n_jobs=-1, cv=5)"
+        "# search = HyperparameterOptimizationSearch(models=models_search_clf, params=params_search_clf)\n",
+        "# search.fit(X_train, y_train, scoring = 'r2', n_jobs=-1, cv=5)"
       ]
     },
     {
@@ -19883,15 +19883,15 @@
         }
       ],
       "source": [
-        "grid_search_summary, grid_search_pipelines = search.score_summary(sort_by='mean_score')\n",
-        "grid_search_summary"
+        "# grid_search_summary, grid_search_pipelines = search.score_summary(sort_by='mean_score')\n",
+        "# grid_search_summary"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Best model and hyperparameters"
+        "<!-- ### Best model and hyperparameters -->"
       ]
     },
     {
@@ -19911,8 +19911,8 @@
         }
       ],
       "source": [
-        "best_model_clf = grid_search_summary.iloc[0,0]\n",
-        "best_model_clf"
+        "# best_model_clf = grid_search_summary.iloc[0,0]\n",
+        "# best_model_clf"
       ]
     },
     {
@@ -19936,8 +19936,8 @@
         }
       ],
       "source": [
-        "best_params_clf = grid_search_pipelines[best_model_clf].best_params_\n",
-        "best_params_clf"
+        "# best_params_clf = grid_search_pipelines[best_model_clf].best_params_\n",
+        "# best_params_clf"
       ]
     },
     {
@@ -19980,15 +19980,15 @@
         }
       ],
       "source": [
-        "pipeline_clf = grid_search_pipelines[best_model_clf].best_estimator_\n",
-        "pipeline_clf"
+        "# pipeline_clf = grid_search_pipelines[best_model_clf].best_estimator_\n",
+        "# pipeline_clf"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Assessing feature importance"
+        "<!-- ### Assessing feature importance -->"
       ]
     },
     {
@@ -20016,43 +20016,43 @@
         }
       ],
       "source": [
-        "# after data cleaning and feature engineering, the feature space may change\n",
-        "data_cleaning_feat_eng_steps = 2\n",
+        "# # after data cleaning and feature engineering, the feature space may change\n",
+        "# data_cleaning_feat_eng_steps = 2\n",
         "\n",
-        "# Transform X_train with the first steps of the pipeline and convert the result back to a DataFrame\n",
-        "transformed_data = Pipeline(pipeline_clf.steps[:data_cleaning_feat_eng_steps]).transform(X_train)\n",
+        "# # Transform X_train with the first steps of the pipeline and convert the result back to a DataFrame\n",
+        "# transformed_data = Pipeline(pipeline_clf.steps[:data_cleaning_feat_eng_steps]).transform(X_train)\n",
         "\n",
-        "# Convert transformed data back to a DataFrame and retain the original column names\n",
-        "columns_after_data_cleaning_feat_eng = pd.DataFrame(transformed_data, columns=X_train.columns)\n",
+        "# # Convert transformed data back to a DataFrame and retain the original column names\n",
+        "# columns_after_data_cleaning_feat_eng = pd.DataFrame(transformed_data, columns=X_train.columns)\n",
         "\n",
-        "# Select the best features after feature selection\n",
-        "best_features = columns_after_data_cleaning_feat_eng.columns[\n",
-        "    pipeline_clf['feat_selection'].get_support()\n",
-        "].to_list()\n",
+        "# # Select the best features after feature selection\n",
+        "# best_features = columns_after_data_cleaning_feat_eng.columns[\n",
+        "#     pipeline_clf['feat_selection'].get_support()\n",
+        "# ].to_list()\n",
         "\n",
-        "# Create a DataFrame to display feature importance\n",
-        "df_feature_importance = pd.DataFrame(data={\n",
-        "    'Feature': best_features,\n",
-        "    'Importance': pipeline_clf['model'].feature_importances_\n",
-        "}).sort_values(by='Importance', ascending=False)\n",
+        "# # Create a DataFrame to display feature importance\n",
+        "# df_feature_importance = pd.DataFrame(data={\n",
+        "#     'Feature': best_features,\n",
+        "#     'Importance': pipeline_clf['model'].feature_importances_\n",
+        "# }).sort_values(by='Importance', ascending=False)\n",
         "\n",
-        "# Reassign best features in order\n",
-        "best_features = df_feature_importance['Feature'].to_list()\n",
+        "# # Reassign best features in order\n",
+        "# best_features = df_feature_importance['Feature'].to_list()\n",
         "\n",
-        "# Most important features statement and plot\n",
-        "print(f\"* These are the {len(best_features)} most important features in descending order. \"\n",
-        "      f\"The model was trained on them: \\n{best_features}\")\n",
+        "# # Most important features statement and plot\n",
+        "# print(f\"* These are the {len(best_features)} most important features in descending order. \"\n",
+        "#       f\"The model was trained on them: \\n{best_features}\")\n",
         "\n",
-        "# Plot feature importance\n",
-        "df_feature_importance.plot(kind='bar', x='Feature', y='Importance')\n",
-        "plt.show()"
+        "# # Plot feature importance\n",
+        "# df_feature_importance.plot(kind='bar', x='Feature', y='Importance')\n",
+        "# plt.show()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate regressor with categorical target on train and test sets"
+        "<!-- ## Evaluate regressor with categorical target on train and test sets -->"
       ]
     },
     {
@@ -20072,7 +20072,7 @@
         }
       ],
       "source": [
-        "disc.binner_dict_['SalePrice']"
+        "# disc.binner_dict_['SalePrice']"
       ]
     },
     {
@@ -20095,8 +20095,8 @@
         }
       ],
       "source": [
-        "label_map = ['129,975 and under', '129,975 to 163,000', '163,000 to 214,000', '214,000 and over']\n",
-        "label_map"
+        "# label_map = ['129,975 and under', '129,975 to 163,000', '163,000 to 214,000', '214,000 and over']\n",
+        "# label_map"
       ]
     },
     {
@@ -20137,7 +20137,7 @@
         }
       ],
       "source": [
-        "X_train.info()"
+        "# X_train.info()"
       ]
     },
     {
@@ -20179,9 +20179,9 @@
         }
       ],
       "source": [
-        "regression_performance(X_train, y_train, X_test, y_test, pipeline_clf)\n",
-        "regression_evaluation_plots(X_train, y_train, X_test, y_test,\n",
-        "                            pipeline_clf)"
+        "# regression_performance(X_train, y_train, X_test, y_test, pipeline_clf)\n",
+        "# regression_evaluation_plots(X_train, y_train, X_test, y_test,\n",
+        "#                             pipeline_clf)"
       ]
     },
     {
